<resources>
  <string name="app_name">timelet</string>
  <string name="global_error_message">Something went wrong.</string>
  <string name="loading">Loading…</string>
  <string name="ooops">Ooops…</string>
  <string name="you_have_no_internet_connection">You have no internet connection.</string>
  <string name="retry">Retry</string>
  <string name="proceed">Proceed</string>
  <string name="go_to_settings">Please go to settings to\ngrant the permission.</string>
  <string name="title_timelet">timelet</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="log_in">Log In</string>
  <string name="don_t_have_an_account">Don\'t have an account?</string>
  <string name="sign_up">Sign up</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="already_have_an_account">Already have an account?</string>
  <string name="calendar">Calendar</string>
  <string name="task">Task</string>
  <string name="title">Title</string>
  <string name="create_a_task">Create a Task</string>
  <string name="description">Description</string>
  <string name="save">Save</string>
  <string name="select_a_date">Select date and time</string>
  <string name="search">Search for Tasks</string>
  <string name="task_added_successfull">Task has been added to the calendar.</string>
  <string name="successfull_register">You have been registered successfully.</string>
  <string name="update">Update</string>
  <string name="delete">Delete</string>
  <string name="task_details">Task Details</string>
  <string name="successfull_update">Task has been successfully updated.</string>
  <string name="failed_update">Failed to update the task.</string>
  <string name="successfull_delete">Task has been deleted.</string>
  <string name="failed_delete">Task has not been deleted.</string>
  <string name="there_are_no_tasks_for_the_selected_date">There are no tasks for the selected date.</string>
  <string name="category_optional">Category (optional):</string>
</resources>