<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical">

  <include
    android:id="@+id/toolbar"
    layout="@layout/toolbar" />

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <include
      android:id="@+id/loading_layout"
      android:visibility="gone"
      layout="@layout/content_loading" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:paddingHorizontal="20dp">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_details"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginVertical="40dp"
        android:layout_marginHorizontal="16dp" />

      <com.google.android.material.textfield.TextInputLayout
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@android:color/transparent"
          android:imeOptions="actionNext">

        </com.google.android.material.textfield.TextInputEditText>
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:layout_marginVertical="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_description"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@android:color/transparent"
          android:imeOptions="actionDone">

        </com.google.android.material.textfield.TextInputEditText>
      </com.google.android.material.textfield.TextInputLayout>


      <TextView
        android:id="@+id/btn_select_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:background="@drawable/selected_cal_decorator"
        android:padding="12dp"
        android:text="@string/select_a_date"
        android:textColor="@color/dark_blue" />

      <TextView
        android:id="@+id/tv_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="16dp"
        tools:text="10.10.2000 13:40" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
          android:layout_marginEnd="4dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/category_optional" />

        <Spinner
          android:layout_marginStart="4dp"
          android:id="@+id/spinner"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
      </LinearLayout>

      <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="16dp"
        android:text="@string/update"
        android:textAllCaps="false" />

      <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/delete"
        android:textAllCaps="false" />
    </LinearLayout>
  </FrameLayout>
</LinearLayout>