<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/background">

  <include
    android:id="@+id/loading_layout"
    android:visibility="gone"
    layout="@layout/content_loading" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:gravity="center">

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/logo"
      android:layout_marginVertical="40dp"
      android:layout_marginHorizontal="16dp" />

    <com.google.android.material.textfield.TextInputLayout
      android:layout_marginVertical="10dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/username">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:background="@android:color/transparent">

      </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:layout_marginVertical="16dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:background="@android:color/transparent">

      </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
      android:id="@+id/btn_login"
      android:text="@string/log_in"
      android:textAllCaps="false"
      android:layout_marginVertical="16dp"
      android:layout_width="match_parent"
      android:layout_height="50dp" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="end">

      <TextView
        android:layout_marginEnd="4dp"
        android:text="@string/don_t_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

      <TextView
        android:id="@+id/tv_sign_up"
        android:text="@string/sign_up"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue" />
    </LinearLayout>

  </LinearLayout>
</FrameLayout>